--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,27 @@
+*{
+  box-sizing: border-box;
+  width: 100%;
+}
+
 body {
   font-family: 'Bebas Neue', sans-serif;
 }
 
+header {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+
+.logo {
+  width: 20rem;
+}
+
 .pokemon-list {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .listitem {
@@ -11,10 +29,12 @@ body {
 }
 
 .pokemon-button {
-  background-color: rgb(255, 242, 0);
+  background-color: #fff200;
   border: 0.5rem solid rgb(255, 74, 228);
-  margin: 10px;
+  margin: 10px 30px 10px 30px;
   padding: 20px;
   font-family: inherit;
   font-size: 3rem;
+  width: 95vw;
+ 
 }
