--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
-* {
-  box-sizing: border-box;
-  width: 100%;
-  margin: 0;
+:root {
+  --text-color: black;
+  --primary-color:  #fff200;
+  --secondary-color: #ff4ae4;
+  --background-color: #8ed7f9;
 }
 
 body {
   font-family: 'Bebas Neue', sans-serif;
   overflow-x: hidden;
-  background-color: #8ed7f9;
+  background-color: var(--background-color);
 }
 
 header {
@@ -33,18 +34,84 @@ header {
   align-items: center;
   justify-content: center;
   padding: 0;
+  max-width: 100%;
 }
 
 .listitem {
  list-style-type: none;
+ width: 99%;
 }
 
 .pokemon-button {
-  background-color: #fff200;
-  border: 0.5rem solid #ff4ae4;
+  background-color: var(--primary-color);
+  border: 0.5rem solid var(--secondary-color);
   margin: 10px;
   padding: 20px;
   font-family: inherit;
   font-size: 3rem;
   width: 99%;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+
+  /* to show it above other content */
+  z-index: 999; 
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto; 
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  background-color: var(--primary-color);
+  border: 0.5rem solid var(--secondary-color);
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+  text-align: center;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: var(--text-color);
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.modal h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 50px;
+}
+
+.modal p {
+  margin-bottom: 0;
+  margin-top: 5px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.pokemon-image {
+  height: 200px;;
 }
