--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,33 @@ body {
   background-color: var(--background-color);
 }
 
+body::-webkit-scrollbar{
+  display: none;
+}
+
 header {
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+header img:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
 
@@ -24,8 +48,8 @@ header {
 
 .ball{
   width: 5rem;
-  margin-left: 30px;
-  margin-right:30px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .pokemon-list {
@@ -45,12 +69,18 @@ header {
 .pokemon-button {
   background-color: var(--primary-color);
   border: 0.5rem solid var(--secondary-color);
-  margin: 10px;
+  margin: 10px 20px 10px 20px;
   padding: 20px;
   font-family: inherit;
   font-size: 3rem;
-  width: 99%;
+  width: 97%;
   cursor: pointer;
+}
+
+.pokemon-button:hover {
+  transform: scale(1.03);
+  
+  max-width: 99%;
 }
 
 #modal-container {
