--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,17 @@
 :root {
   --text-color: black;
-  --primary-color:  #fff200;
+  --primary-color: #fff200;
   --secondary-color: #ff4ae4;
   --background-color: #8ed7f9;
 }
 
 body {
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: "Bebas Neue", sans-serif;
   overflow-x: hidden;
   background-color: var(--background-color);
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   display: none;
 }
 
@@ -27,26 +27,47 @@ header img:hover {
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
-
 
 .logo {
   width: 20rem;
   margin-top: 10px;
 }
 
-.ball{
+.ball {
   width: 5rem;
   margin-left: 50px;
   margin-right: 50px;
@@ -68,14 +89,14 @@ header img:hover {
 }
 
 .list-group-item {
- list-style-type: none;
- text-align: center;
- background-color: var(--background-color);
- border: none;
- padding: 0;
+  list-style-type: none;
+  text-align: center;
+  background-color: var(--background-color);
+  border: none;
+  padding: 0;
 }
 
-.btn{
+.btn {
   background-color: var(--primary-color);
   border: 0.5rem solid var(--secondary-color);
   margin: 10px auto 10px auto;
@@ -89,7 +110,6 @@ header img:hover {
 .btn:hover {
   transform: scale(1.03);
 }
-
 
 .modal-header {
   border: none;
@@ -126,7 +146,7 @@ span {
 }
 
 .pokemon-image {
-  height: 200px;;
+  height: 200px;
 }
 
 footer {
@@ -145,27 +165,48 @@ footer img:hover {
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 
 @media screen and (max-width: 412px) {
-
   .logo {
     width: 12rem;
     margin-top: 10px;
   }
-  
-  .ball{
+
+  .ball {
     width: 3rem;
     margin-left: 20px;
     margin-right: 20px;
@@ -186,13 +227,13 @@ footer img:hover {
     overflow-x: hidden;
     max-width: 100%;
   }
-  
+
   .logo {
     width: 10rem;
     margin-top: 10px;
   }
-  
-  .ball{
+
+  .ball {
     width: 3rem;
     margin-left: 20px;
     margin-right: 20px;
@@ -207,19 +248,19 @@ footer img:hover {
     padding: 0;
   }
 
-  .btn{
+  .btn {
     font-size: 2rem;
   }
 }
 
-@media screen and (min-width: 712px) and (max-width:991px) {
-  .btn{
+@media screen and (min-width: 712px) and (max-width: 991px) {
+  .btn {
     font-size: 2rem;
   }
 }
 
 @media screen and (min-width: 992px) {
-.btn{
-  max-width: 1000px;
-}
+  .btn {
+    max-width: 1000px;
+  }
 }
